Add link support to QuteWebTemplateBuildItem