@@ -2,9 +2,9 @@ package io.quarkiverse.qute.web.deployment.devui;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import io.quarkiverse.qute.web.deployment.QuteWebTemplatePathBuildItem;
+import io.quarkiverse.qute.web.deployment.QuteWebTemplateBuildItem;
+import io.quarkiverse.qute.web.runtime.PathUtils;
 import io.quarkiverse.qute.web.runtime.QuteWebBuildTimeConfig;
 import io.quarkus.deployment.IsDevelopment;
 import io.quarkus.deployment.annotations.BuildProducer;
@@ -13,23 +13,25 @@ import io.quarkus.devui.spi.page.CardPageBuildItem;
 import io.quarkus.devui.spi.page.Page;
 import io.quarkus.vertx.http.deployment.HttpRootPathBuildItem;
 import io.vertx.core.json.JsonArray;
+import io.vertx.core.json.JsonObject;
 
 public class QuteWebDevUIProcessor {
 
     @BuildStep(onlyIf = IsDevelopment.class)
-    public void pages(List<QuteWebTemplatePathBuildItem> templatePaths, HttpRootPathBuildItem httpRootPath,
+    public void pages(List<QuteWebTemplateBuildItem> templatePaths, HttpRootPathBuildItem httpRootPath,
             QuteWebBuildTimeConfig config, BuildProducer<CardPageBuildItem> cardPages) {
 
         CardPageBuildItem pageBuildItem = new CardPageBuildItem();
-
+        final String publicDir = config.publicDir();
         JsonArray paths = new JsonArray();
-        for (String path : templatePaths.stream().map(QuteWebTemplatePathBuildItem::getPath)
-                .sorted(Comparator.comparing(p -> p.toLowerCase())).collect(Collectors.toList())) {
-            paths.add(path);
+        for (QuteWebTemplateBuildItem item : templatePaths.stream()
+                .sorted(Comparator.comparing(p -> p.templatePath().toLowerCase())).toList()) {
+            var link = item.link() == null ? PathUtils.removeLeadingSlash(item.templatePath().replace(publicDir, ""))
+                    : item.link();
+            link = PathUtils.join(httpRootPath.relativePath(config.rootPath()), link);
+            paths.add(new JsonObject().put("templateId", item.templatePath()).put("link", link));
         }
-
         pageBuildItem.addBuildTimeData("paths", paths);
-        pageBuildItem.addBuildTimeData("rootPrefix", httpRootPath.relativePath(config.rootPath()) + "/");
 
         pageBuildItem.addPage(Page.webComponentPageBuilder()
                 .title("Pages")
